--- a/module-1/03-pricing-cards-1/code/styles.css
+++ b/module-1/03-pricing-cards-1/code/styles.css
@@ -1,15 +1,39 @@
 body {
   font-family: "Roboto", sans-serif;
   text-align: center;
+  color: #4e4e4e;
 }
 
 h1 {
   font-size: 2.5rem;
   text-transform: uppercase;
-  color: #00a1ab;
   font-weight: 900;
   margin-top: 3em;
   margin-bottom: 0;
+}
+
+a {
+    color: #4e4e4e;
+}
+
+.text-300 {
+    color: #e5e3e8;
+}
+
+.text-200 {
+    color: #fafafa;
+}
+
+.text-white {
+    color: #fff;
+}
+
+.accent {
+    color: #00cdac;
+}
+
+.accent-700 {
+    color: #114243;
 }
 
 .subhead {
@@ -23,7 +47,6 @@ h1 {
 }
 
 .plan {
-  color: #fff;
   background: linear-gradient(-45deg, #00a1ab, #3741a0);
   width: 200px;
   padding: 2em;
@@ -53,12 +76,20 @@ h1 {
   line-height: 1.5;
 }
 
-.plan__button {
-  background: white;
-  color: #4e4e4e;
+.button {
   text-decoration: none;
   padding: 0.5em 0.75em;
   border-radius: 0.25em;
   text-transform: uppercase;
   font-weight: 700;
+}
+
+.button--light {
+    color: #4e4e4e;
+    background: #fff;
+}
+
+.button--dark {
+    color: #fff;
+    background: #4e4e4e;
 }
