--- a/module-1/03-pricing-cards-1/code/styles.css
+++ b/module-1/03-pricing-cards-1/code/styles.css
@@ -47,11 +47,20 @@ a {
 }
 
 .plan {
-  background: linear-gradient(-45deg, #00a1ab, #3741a0);
   width: 200px;
   padding: 2em;
   border-radius: 1em;
   margin: 0 0.5em;
+}
+
+.plan--light {
+  color: #4e4e4e;
+  background: linear-gradient(-45deg, #e5e3e8, #fafafa);
+}
+
+.plan--dark {
+    color: #fff;
+    background: linear-gradient(-45deg, #00a1ab, #3741a0);
 }
 
 .plan__title {
