--- a/module-1/06-overlooked-fundamentals-final-project/01 - start here/styles.css
+++ b/module-1/06-overlooked-fundamentals-final-project/01 - start here/styles.css
@@ -2,6 +2,9 @@
   --clr-base-400: #5e5e5e;
   --clr-base-500: #494949;
 
+  --clr-accent-400: #7E47C5;
+  --clr-neutral-100: #ffffff;
+
   --clr-ui-300: #f8e2ff;
   --clr-ui-400: #580d3a;
   --clr-ux-300: #e2ffea;
@@ -12,6 +15,10 @@
   --ff-accent: "Podkova", serif;
   --ff-base: "Open Sans", sans-serif;
 
+  --fs-300: 0.75rem;
+  --fs-400: 1rem;
+  --fs-500: 2rem;
+
   --fw-400: 400;
   --fw-700: 700;
 
@@ -19,7 +26,91 @@
   --border-radius: 0.75rem;
 }
 
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
 
+body {
+    font-family: var(--ff-base);
+    font-size: var(--ff-400);
+    color: var(--clr-base-400);
+    line-height: 1.6;
+    margin: 0;
+}
+
+.btn {
+    display: inline-flex;
+    text-decoration: none;
+    color: var(--clr-neutral-100);
+    background: var(--clr-accent-400);
+}
+
+.social {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+}
+
+.ui {
+    color: var(--clr-ui-400);
+    background: var(--clr-ui-300);
+}
+
+.ux {
+    color: var(--clr-ux-400);
+    background: var(--clr-ux-300);
+}
+
+.dev {
+    color: var(--clr-dev-400);
+    background: var(--clr-dev-300);
+}
+
+.candidate {
+    padding: .5625em;
+}
+
+.candidate img {
+    border-radius: var(--border-radius);
+}
+
+.candidate .roles {
+    display: flex;
+    gap: .5rem;
+    margin: 0;
+    align-items: flex-start;
+}
+
+.candidate .role {
+    display: inline-block;
+    padding: .125em .75em;
+    border-radius: var(--border-radius);
+}
+
+.candidate .name {
+    font-family: var(--ff-accent);
+    font-size: var(--fs-500);
+    margin: 0;
+    line-height: 1;
+}
+
+.candidate .roles {
+    font-size: var(--fs-300);
+}
+
+.candidate .social {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.candidate .btn {
+    justify-self: end;
+    padding: .5em 2.5em;
+    border-radius: var(--border-radius);
+}
 
 
 
