--- a/module-2/01-project-files/01 - start-here/style.css
+++ b/module-2/01-project-files/01 - start-here/style.css
@@ -1,3 +1,69 @@
-/* Font used
-font-family: 'PT Sans', sans-serif; 
-*/
+:root {
+    --clr-neutral-100: #fff;
+    --clr-neutral-400: #171717;
+
+    --clr-accent-400: #59e89c;
+
+    --ff-base: 'PT Sans', sans-serif;
+
+    --fw-400: 400;
+    --fw-700: 700;
+
+    --fs-300: 1.125rem;
+    --fs-400: 1.25rem;
+    --fs-500: 2.25rem;
+}
+
+*,
+*::before,
+*::after { box-sizing: border-box; }
+
+body {
+    font-family: var(--ff-base);
+    font-size: var(--fs-400);
+    color: var(--clr-neutral-400);
+    line-height: 1.6;
+    margin: 0;
+}
+
+main {
+    background: url('assets/hero.jpg');
+    min-height: 100vh;
+    background-size: cover;
+    background-repeat: no-repeat;
+    display: grid;
+    place-content: center;
+}
+
+.btn {
+    font-family: inherit;
+    font-size: var(--fs-300);
+    font-weight: var(--fw-700);
+    color: var(--fg, var(--clr-neutral-400));
+    background: var(--bg, var(--clr-accent-400));
+    display: inline-block;
+    padding: 1.3em 2.8em;
+    text-transform: uppercase;
+    letter-spacing: 3px;
+    border: 0;
+}
+
+.hero {
+    padding: 3em 2.5em;
+    text-align: center;
+    background: var(--clr-neutral-100);
+    width: 90%;
+    max-width: 62.5rem;
+    margin: 0 auto;
+}
+
+.hero__title {
+    font-size: var(--fs-500);
+    font-weight: var(--fw-400);
+    line-height: 1.4;
+    margin: 0;
+}
+
+.hero span {
+    font-weight: var(--fw-700);
+}
