--- a/module-2/03-magic-site-v2/01 - starting files/style.css
+++ b/module-2/03-magic-site-v2/01 - starting files/style.css
@@ -33,9 +33,14 @@ p {
   margin: 0;
 }
 
+img {
+  display: block;
+  max-width: 100%;
+}
+
 /* Utility classes */
 .flow-content > * + * {
-  margin-top: 1.25rem;
+  margin-top: calc(var(--spacer) * 4);
 }
 
 /* general styling */
@@ -67,4 +72,68 @@ h1 span {
   padding: 0.75em 1.5em;
   background-color: var(--clr-accent-400);
   color: var(--clr-neutral-900);
+}
+
+.container {
+    width: 90%;
+    max-width: 1000px;
+    margin: 0 auto;
+}
+
+.hero,
+.mastering,
+.join {
+    padding: 8rem 0;
+}
+
+.cta {
+    padding: 6rem 0;
+}
+
+.hero__content {
+    display: flex;
+    gap: calc(var(--spacer) * 4);
+}
+
+.hero .flow-content {
+    flex-grow: 1;
+    flex-basis: 60%;
+}
+
+.mastering {
+    background: var(--clr-neutral-900);
+    color: var(--clr-neutral-100);
+}
+
+.mastering h2 {
+    color: var(--clr-accent-400);
+}
+
+.mastering ul,
+.join ul {
+    display: flex;
+    list-style: none;
+    gap: calc(var(--spacer) * 2);
+}
+
+.join li {
+    position: relative;
+}
+
+.join li::before {
+    content: '';
+    /* display: block; */
+    width: 70px;
+    height: 70px;
+    background: var(--clr-accent-400);
+    position: absolute;
+    top: -5px;
+    left: -5px;
+    z-index: -1;
+}
+
+.cta {
+    background: url(assets/cta-bg.jpg);
+    color: var(--clr-neutral-100);
+    text-align: center;
 }
