--- a/module-4/05-article-challenge-2/style.css
+++ b/module-4/05-article-challenge-2/style.css
@@ -133,13 +133,20 @@ a:focus {
   font-size: var(--fs-600);
 }
 
+.article-full h3,
 .section-title {
   font-size: var(--fs-600);
   color: var(--clr-neutral-400);
 }
 
+.article-full h3 + p,
 .section-subtitle {
   font-size: var(--fs-600);
+}
+
+.article-full h3 + p {
+    font-family: var(--ff-serif);
+    margin-top: 0;
 }
 
 .btn {
